# CMake

./: .gitignore  1-commit-msg  CMakeLists.txt  README.rst  bootstrap  daemon-client.py
Example/Canadian/: CMakeLists.txt
Example/ExternalProjects/: CMakeLists.txt  host_tool.cpp
Example/ExternalProjects/host/: CMakeLists.txt
Example/HostAndMultiTarget/: CMakeLists.txt
Example/HostAndTarget/: Android14MipsToolchain.cmake  CMakeLists.txt  ClangArmToolchain.cmake  RaspPiToolchain.cmake  targetlib.cpp
Example/LanguageSupport/: CMakeLists.txt
Example/Toolchains/: Android14MipsToolchain.cmake  ClangArmToolchain.cmake  RaspPiToolchain.cmake
Help/: index.rst
Help/command/: add_library.rst  target_link_libraries.rst
Help/manual/: cmake-buildsystem.7.rst  cmake-compile-features.7.rst  cmake-generator-expressions.7.rst  cmake-metadata-generation.7.rst  cmake-properties.7.rst  cmake-server.7.rst  cmake-variables.7.rst
Help/policy/: CMP0055.rst
Help/prop_gbl/: CMAKE_CXX_KNOWN_FEATURES.rst
Help/prop_tgt/: COMPILE_DEFINITIONS.rst  SYSTEM_INCLUDE_DIRECTORIES.rst
Help/release/dev/: object-library-linking.rst
Help/variable/: CMAKE_GENERATE_METADATA.rst
Modules/: AutoQDBusInfo.cmake.in  AutogenInfo.cmake.in  CMakeCXXCompiler.cmake.in  CMakeDetermineCompileFeatures.cmake  CPack.cmake  CheckCXXLinkerFlag.cmake  FindPNG.cmake  GenerateExportHeader.cmake  MetadataSchema-3.3.json  WriteCompilerDetectionHeader.cmake  bar-descriptor-footer.xml.in  bar-descriptor-header.xml.in
Modules/Compiler/: AppleClang-CXX-FeatureTests.cmake  Clang-CXX-FeatureTests.cmake  GNU-CXX-FeatureTests.cmake  GNU-CXX.cmake  Intel-CXX-FeatureTests.cmake  Intel-CXX.cmake  MSVC-CXX-FeatureTests.cmake  SunPro-CXX-FeatureTests.cmake
Modules/Internal/: FeatureTesting.cmake
Modules/Platform/: Android.cmake
Source/: CMakeLists.txt  cmAddCustomCommandCommand.cxx  cmAddCustomCommandCommand.h  cmAddCustomTargetCommand.cxx  cmAddCustomTargetCommand.h  cmAddExecutableCommand.cxx  cmAddLibraryCommand.cxx  cmAlgorithms.h  cmCMakePolicyCommand.cxx  cmCMakePolicyCommand.h  cmCPluginAPI.cxx  cmCacheManager.h  cmComputeLinkDepends.cxx  cmComputeLinkDepends.h  cmComputeLinkInformation.cxx  cmComputeLinkInformation.h  cmComputeTargetDepends.cxx  cmComputeTargetDepends.h  cmCoreTryCompile.cxx  cmCustomCommandGenerator.cxx  cmDependsC.cxx  cmDependsFortran.cxx  cmDocumentationFormatter.cxx  cmExportBuildFileGenerator.cxx  cmExportFileGenerator.cxx  cmExportFileGenerator.h  cmExportInstallFileGenerator.cxx  cmExportInstallFileGenerator.h  cmExportTryCompileFileGenerator.cxx  cmExportTryCompileFileGenerator.h  cmExtraCodeBlocksGenerator.cxx  cmFLTKWrapUICommand.cxx  cmFindPackageCommand.cxx  cmFunctionCommand.cxx  cmGeneratorExpression.cxx  cmGeneratorExpression.h  cmGeneratorExpressionContext.cxx  cmGeneratorExpressionContext.h  cmGeneratorExpressionEvaluator.cxx  cmGeneratorExpressionNode.cxx  (+88 more)
Source/CPack/: cmCPackAPKGenerator.cxx  cmCPackAPKGenerator.h  cmCPackBARGenerator.cxx  cmCPackBARGenerator.h  cmCPackGeneratorFactory.cxx
Tests/: CMakeLists.txt  test_metadata.py
Tests/CMakeCommands/target_compile_definitions/: CMakeLists.txt  consumer.cpp
Tests/CMakeCommands/target_include_directories/: CMakeLists.txt  consumer.cpp
Tests/CompileDefinitions/: CMakeLists.txt
Tests/CompileFeatures/: CMakeLists.txt  cxx_auto_storage_type_specifier.cpp  cxx_two_phase_lookup.cpp
Tests/Complex/: CMakeLists.txt
Tests/ComplexOneConfig/: CMakeLists.txt
Tests/GeneratorExpression/: CMakeLists.txt  check-part1.cmake
Tests/Metadata/: CMakeLists.txt  always_excluded.cpp  bar_file.cpp  bar_file.h  c_file.c  c_file.h  cmake-metadata-Linux-GNU-4.9.json  compiled_as_cxx.c  foo_debug.cpp  foo_debug.h  foo_gcc_eq_44.cpp  foo_gcc_eq_44.h  foo_gcc_gt_44.cpp  foo_gcc_gt_44.h  foo_gcc_gte_44.cpp  foo_gcc_gte_44.h  foo_gcc_lt_44.cpp  foo_gcc_lt_44.h  foo_linux.cpp  foo_linux.h  foo_linux_clang.cpp  foo_linux_clang.h  foo_linux_gcc.cpp  foo_linux_gcc.h  foo_msvc_eq_1800_debug.cpp  foo_msvc_eq_1800_debug.h  foo_msvc_gt_1800_debug.cpp  foo_msvc_gt_1800_debug.h  foo_msvc_gte_1800_debug.cpp  foo_msvc_gte_1800_debug.h  foo_msvc_lt_1800_debug.cpp  foo_msvc_lt_1800_debug.h  foo_not_debug.cpp  foo_not_debug.h  foo_not_release.cpp  foo_not_release.h  foo_release.cpp  foo_release.h  foo_windows.cpp  foo_windows.h  (+22 more)
Tests/Metadata/shared_private_dir/: shared_private.h
Tests/Metadata/shared_public_dir/: shared_public.h
Tests/Metadata/static_private_dir/: static_private.h
Tests/Metadata/static_public_dir/: static_public.h
Tests/Module/GenerateExportHeader/: CMakeLists.txt
Tests/Module/GenerateExportHeader/lib_shared_and_static/: CMakeLists.txt  libshared_and_static.h
Tests/Module/GenerateExportHeader/libshared/: CMakeLists.txt
Tests/QtAutoQDBus/: CMakeLists.txt  publisher.cpp  publisher.h  subscriber.cpp  subscriber.h
Tests/QtAutogen/: CMakeLists.txt
Tests/QtAutogen/autorcc_depends/: CMakeLists.txt  res2.qrc.in  src_file.txt
Tests/RunCMake/: CMakeLists.txt
Tests/RunCMake/ObjectLibrary/: LinkObjRHSShared.cmake  LinkObjRHSStatic.cmake  RunCMakeTest.cmake  b.c  exe.c  requires.c
Tests/RunCMake/TargetSources/: ExportBuild.cmake  RunCMakeTest.cmake
Tests/RunCMake/WarnUninitialized/: RunCMakeTest.cmake  unused1-stderr.txt
Tests/RunCMake/add_custom_command/: AppendNotOutput-stderr.txt
Tests/RunCMake/deprecation/: RunCMakeTest.cmake  deprecation-behavior-Clang-stderr.txt  deprecation-behavior-Clang.cmake  deprecation-behavior-GNU-stderr.txt  deprecation-behavior.cmake
Tests/RunCMake/deprecation/source/: CMakeLists.txt  lib.cpp
Tests/RunCMake/set_property/: COMPILE_DEFINITIONS-stdout.txt  COMPILE_OPTIONS-stdout.txt  INCLUDE_DIRECTORIES-stdout.txt
Tests/Server/: CMakeLists.txt  cmakelib.py  server-test.py  tc_handshake.json
Tests/SystemInformation/: CMakeLists.txt  SystemInformation.in
